# pico-hubasic

./: .cursorrules  .gitignore  CMakeLists.txt  MANUAL.md  README.md  SETUP.md  debug_if  debug_if.cpp  specification.md
.agent/: coding-standards.md  hubasic-spec.md  instructions.md  tech-stack.md
.github/workflows/: ci.yml
docs/: COMMAND_STATUS.md  DEVICE_CHECKLIST.md  PHASE_RUNTIME.md  RUNTIME_GAPS.md  TESTING.md
src/: hal_display.cpp  hal_display.h  hal_font.h  hal_gpio.cpp  hal_gpio.h  hal_sdcard.cpp  hal_sdcard.h  hal_sound.cpp  hal_sound.h  hal_touch.cpp  hal_touch.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  repl.cpp  repl.h
tests/: mock_hal_display.cpp  mock_hal_display.h  test_2d_array_longvar_string.cpp  test_advanced_features.cpp  test_advanced_graphics.cpp  test_builtin_functions_ext.cpp  test_extended_core.cpp  test_file_ops.cpp  test_gpio_brightness.cpp  test_graphics.cpp  test_input_end_stop.cpp  test_lexer.cpp  test_parser.cpp  test_sound_logic.cpp  test_touch_play.cpp
